#210810_김경일_후기게시판 구현(진행중) commit date : 210810 writer : 김경일 branch : 210807_gyeong_review comment - 후기게시판 CRUD 구현 - 일부 폴더구조 변경 - 조회수 증가 미 구현

--- a/src/main/webapp/temp1.html
+++ b/src/main/webapp/temp1.html
@@ -12,11 +12,13 @@
     </style>
 </head>
 <body>
-        <div id="reviewL-container" style="border: 1pt solid;">
-            123
-            <div class="navibar" style="border: 1pt solid">
-                    123
-            </div>
-        </div>
+
+    <input type="hidden" name="abc"/>
+    <input type="hidden" name="abc"/>
+    <script>
+        document.getElementsByName("abc")[0].value = "1234";
+        document.getElementsByName("abc")[1].value = "12324";
+    </script>
+
 </body>
 </html>
